# aurca

./: .dockerignore  .env.example  .gitignore  README.md  aurca_reset.bat  aurca_start.bat  docker-compose-cpu.yml  docker-compose.yml  exec.bat  pyproject.toml
docker/: Dockerfile
docker/miner/: Dockerfile  Dockerfile.cpu  _xcconfig.ini  config.ini  cpu_config.ini  entrypoint.sh  entrypoint_cpu.sh
install/: install_.sh  setup_swap.sh
src/: main.py
src/application/ports/output/: market_data_storage.py  market_repository.py  notification_port.py
src/application/use_cases/data_management/: monitor_accuracy.py  sync_historical_data.py  sync_mining_earnings.py  sync_mining_stats.py
src/application/use_cases/trading/: evaluate_strategy.py
src/domain/entities/: market_data.py
src/domain/services/feature_engineering/: indicators.py
src/infrastructure/: config.py
src/infrastructure/adapters/binance/: binance_adapter.py  websocket_adapter.py
src/infrastructure/adapters/binance/cpp_engine/: CMakeLists.txt  pyproject.toml
src/infrastructure/adapters/binance/cpp_engine/aurca_engine/: __init__.py  aurca_engine.pyi  bindings.cpp
src/infrastructure/adapters/binance/cpp_engine/aurca_engine/src/: features.cpp  features.hpp
src/infrastructure/adapters/database/: models.py
src/infrastructure/adapters/database/repositories/: timescale_repository.py
src/infrastructure/adapters/notifications/: telegram_adapter.py
src/infrastructure/adapters/sensors/: temp_monitor.py
tests/: test_cpp.py  test_rsi_integration.py
tool/: SmartTree.ps1
