#src\infrastructure\adapters\binance\cpp_engine\pyproject.toml
[build-system]
requires = ["scikit-build-core>=0.11", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "aurca_engine"
version = "0.1.0"

[tool.scikit-build]
# Esto fuerza a buscar en la carpeta actual
wheel.packages = ["aurca_engine"]
# AÑADE ESTO:
sdist.include = ["aurca_engine/*"]
wheel.expand-macos-universal-tags = true
install.components = ["python_modules"]
cmake.verbose = true