[project]
name = "aurca_engine"  
version = "0.1.0"
description = "Motor C++ para cálculos de Binance"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.install-dir = "aurca_engine"  
cmake.build-type = "Release"       